--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ data/item_categories.csv
 .ipynb_checkpoints/model_cls-checkpoint.ipynb
 .ipynb_checkpoints/data_submit-checkpoint.ipynb
 .ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
+.ipynb_checkpoints/obtain_data-checkpoint.ipynb
+.ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
+.ipynb_checkpoints/README-checkpoint.md
+.ipynb_checkpoints/ts_stattest-checkpoint.ipynb
+.ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
+.ipynb_checkpoints/obtain_data-checkpoint.ipynb
+.ipynb_checkpoints/obtain_data-checkpoint.ipynb
