--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ data/item_categories.csv
 .ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
 .ipynb_checkpoints/obtain_data-checkpoint.ipynb
 .ipynb_checkpoints/obtain_data-checkpoint.ipynb
+.ipynb_checkpoints/README-checkpoint.md
