delete all checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,18 @@ data/item_categories.csv
 .ipynb_checkpoints/obtain_data-checkpoint.ipynb
 .ipynb_checkpoints/obtain_data-checkpoint.ipynb
 .ipynb_checkpoints/README-checkpoint.md
+.ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
+.ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
+.ipynb_checkpoints/exploratory-checkpoint.ipynb
+.ipynb_checkpoints/obtain_data-checkpoint.ipynb
+.ipynb_checkpoints/outlier-checkpoint.ipynb
+.ipynb_checkpoints/ts_stattest-checkpoint.ipynb
+.ipynb_checkpoints/ts_stattest-checkpoint.ipynb
+.ipynb_checkpoints/outlier-checkpoint.ipynb
+.ipynb_checkpoints/obtain_data-checkpoint.ipynb
+.ipynb_checkpoints/exploratory-checkpoint.ipynb
+.ipynb_checkpoints/ts_stattest-checkpoint.ipynb
+*.ipynb
+.ipynb_checkpoints/outlier-checkpoint.ipynb
+.ipynb_checkpoints/clean_wrangling-checkpoint.ipynb
+.ipynb_checkpoints/exploratory-checkpoint.ipynb
